--- a/views/admin/restaurants.hbs
+++ b/views/admin/restaurants.hbs
@@ -1,5 +1,10 @@
 <div>
   <h1>餐廳後台</h1>
+  <div class="d-flex flex-nowrap">
+    <a href="/admin/restaurants" class="pr-1">Restaurants</a>
+    <p>|</p>
+    <a href="/admin/Users" class="pl-1">Users</a>
+  </div>
 
   <a href='/admin/restaurants/create'>
     <button type="button" class="btn btn-primary">New Restaurant</button>
