cate func Read done

--- a/views/admin/users.hbs
+++ b/views/admin/users.hbs
@@ -1,9 +1,11 @@
 <div>
   <h1>餐廳後台</h1>
   <div class="d-flex flex-nowrap">
-    <a href="/admin/restaurants" class="pr-1">Restaurants</a>
+    <a href="/admin/restaurants" class="p-1">Restaurants</a>
     <p>|</p>
-    <a href="/admin/Users" class="pl-1">Users</a>
+    <a href="/admin/Users" class="p-1">Users</a>
+    <p>|</p>
+    <a href='/admin/categories' class="p-1">Categories</a>
   </div>
   <br />
   <br />
