--- a/views/editProfile.hbs
+++ b/views/editProfile.hbs
@@ -1,1 +1,15 @@
-<p>edit profile</p>
+<form action="/users/{{user.id}}?_method=PUT" method="POST" enctype="multipart/form-data">
+<div class="form-group" hidden>
+  <label for="id">id</label>
+  <input type="text" class="form-control" id="id" value="{{user.id}}" name="id">
+</div>
+<div class="form-group">
+  <label for="name">Name</label>
+  <input type="text" class="form-control" id="name" value="{{user.name}}" name="name" required>
+</div>
+<div class="form-group">
+  <label for="image">Image</label>
+  <input type="file" class="form-control-file" id="image" name="image">
+</div>
+<button type="submit" class="btn btn-primary">submit</button>
+</form>
