--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,10 +1,27 @@
 <div class="constainer">
-  <div class="d-flex flex-row bg-white shadow-sm">
-    <img src="{{user.image}}" alt="">
-    <div class="ml-3">
-      <h1>{{user.name}}</h1>
-      <p>{{user.email}}</p>
-      <a href="/users/{{user.id}}/edit" class="btn btn-primary">edit</a>
+  
+  <div class="card mb-3">
+    <div class="card-body">
+      <div class="d-flex flex-row">
+        <img src="{{user.image}}" alt="">
+        <div class="ml-3">
+          <h1>{{user.name}}</h1>
+          <p>{{user.email}}</p>
+          <a href="/users/{{user.id}}/edit" class="btn btn-primary">edit</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header">
+      {{length}} 已評論餐廳
+    </div>
+    <div class="card-body row">
+      {{#each comments}}
+      <a href="/restaurants/{{RestaurantId}}" class="m-1">
+        <img src="{{restaurantImage}}" alt="{{restautantName}}" height="70px" width="70px">
+        </a>      
+      {{/each}}
     </div>
   </div>
 </div>
